@@ -39,7 +39,7 @@ std::map<int, int> update_years(connection &C)
 
   // Note all different years currently occurring in the table, writing them
   // and their correct mappings to m_conversions
-  for (auto const [y] :
+  for (auto const &[y] :
        tx.stream<std::optional<int>>("SELECT year FROM pqxxevents"))
   {
     // Read year, and if it is non-null, note its converted value
