@@ -30,7 +30,7 @@ void test_result_iter()
   pqxx::result r{tx.exec("SELECT generate_series(1, 3)")};
 
   int total{0};
-  for (auto const [i] : r.iter<int>()) total += i;
+  for (auto const &[i] : r.iter<int>()) total += i;
   PQXX_CHECK_EQUAL(total, 6, "iter() loop did not get the right values.");
 }
 
